--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta name="theme-color" content="#494f5c">
-	<meta name="msapplication-TileColor" content="#494f5c">
 <meta itemprop="name" content="extrastu">
 <meta itemprop="description" content=""><meta property="og:title" content="extrastu" />
 <meta property="og:description" content="" />
@@ -28,11 +26,12 @@
 	<title>extrastu</title>
 	<link rel="alternate" type="application/rss+xml" href="https://extrastu.me/index.xml" title="extrastu" />
 	<link rel="stylesheet" href="https://extrastu.me/css/style.min.037b6ee8f8c1baab6a3d0a9da11c3ff18a7552471f16c59fd98538d5ce99208b.css" integrity="sha256-A3tu6PjBuqtqPQqdoRw/8Yp1UkcfFsWf2YU41c6ZIIs=" crossorigin="anonymous">
-	
+	<style>.bg-img {background-image: url('./images/me.jpg');}</style>
 </head>
 
 <body id="page">
 	
+	<div class="bg-img"></div>
 	<div id="spotlight" class="animated fadeIn">
 		<div id="home-center">
 			<h1 id="home-title">extrastu</h1>
